--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     <section id="contact">
         <h2>Contact</h2>
         <div class="contact-links">
-            <a href="https://github.com/your-github" target="_blank" class="contact-icon">
+            <a href="https://github.com/HannaOuanounou" target="_blank" class="contact-icon">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://linkedin.com/in/your-linkedin" target="_blank" class="contact-icon">
+            <a href="https://linkedin.com/in/hanna-fettaya" target="_blank" class="contact-icon">
                 <i class="fab fa-linkedin"></i>
             </a>
             <a href="mailto:h.ouanounou@gmail.com" target="_blank" class="contact-icon">
