--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <a href="https://github.com/HannaOuanounou" target="_blank" class="contact-icon">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="www.linkedin.com/in/hanna-fettaya" target="_blank" class="contact-icon">
+            <a href="https://linkedin.com/in/hanna-fettaya" target="_blank" class="contact-icon">
                 <i class="fab fa-linkedin"></i>
             </a>
             <a href="mailto:h.ouanounou@gmail.com" target="_blank" class="contact-icon">
