--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 Through my projects, whether automating intricate processes or building high-performing predictive models, I have honed my ability to transform raw data into actionable insights. My goal is to continue tackling stimulating challenges and pushing the boundaries of AI, while enjoying the process of discovering what’s possible through data science.
             </p>
         </section>
-        <section id="projects" class="project-container">
-        </section>
+        <section id="projects" class="project-container"></section>
     </main>
    <!-- Footer -->
    <footer>
