--- a/hebrew-handwriting-recognition.html
+++ b/hebrew-handwriting-recognition.html
@@ -29,7 +29,6 @@
             </p>
             <ul>
                 <li>Classification of 27 Hebrew cursive letters.</li>
-                <li>A dataset of 5,073 images.</li>
                 <li>Comparison between traditional CNN models and pre-trained models such as ResNet50 and VGG16.</li>
             </ul>
         </section>
@@ -63,8 +62,8 @@
         <section id="resources" class="project-detail">
             <h2>Resources:</h2>
             <ul>
-                <li><a href="https://github.com/HannaOuanounou/hebrew-recognition" target="_blank">GitHub Repository</a></li>
-                <li><a href="https://colab.research.google.com/drive/link" target="_blank">Colab Notebook</a></li>
+                <li><a href="https://github.com/HannaOuanounou/Recognition-of-Handwritten-Hebrew-letters-with-Transfer-Learning" target="_blank">GitHub Repository</a></li>
+                <li><a href="https://colab.research.google.com/github/HannaOuanounou/Recognition-of-Handwritten-Hebrew-letters-with-Transfer-Learning/blob/main/Recognition_of_Handwritten_Hebrew_letters_with_Transfer_Learning.ipynbhttps://colab.research.google.com/github/HannaOuanounou/Recognition-of-Handwritten-Hebrew-letters-with-Transfer-Learning/blob/main/Recognition_of_Handwritten_Hebrew_letters_with_Transfer_Learning.ipynb" target="_blank">Colab Notebook</a></li>
             </ul>
         </section>
     </main>
